--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
+    "@angular/material": "^19.2.19",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "tsparticles": "^3.9.1",
+    "tsparticles-slim": "^2.12.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
