--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ngrx/store": "^21.0.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.8",
     "rxjs": "~7.8.0",
